# bigquery-utils

./: .coverage  .flake8  .gitignore  .hadolint.yaml  .init  .pre-commit-config.yaml  .pylintrc  .style.yapf  CONTRIBUTING.md  MATCH_RECOGNIZE_Tutorial.ipynb  README.md  cloudbuild.yaml  dataform.json  key.json  package-lock.json  package.json  pom.xml  precommit_cloudbuild.yaml  requirements-dev.txt  yamllint-config.yml
.github/workflows/: sql-extraction.yml  vscode-automatic-query-fixer.yml  vscode-sql-extraction.yml
ci/cache/: _functions.sh
ci/image/: Dockerfile  _functions.sh
cloud_functions/gcs_event_based_ingest/: .flake8  .isort.cfg  .pylintrc  Dockerfile.ci  README.md  backfill_notifications.py  cloudbuild.yaml  requirements-dev.txt  requirements.txt
dashboards/geospatial/: bigquery_geospatial_visualization.ipynb
dashboards/system_tables/: README.md
license-templates/: LICENSE.txt
notebooks/: MATCH_RECOGNIZE Tutorial.ipynb  MATCH_RECOGNIZE_Tutorial.ipynb  bigquery_cardinality_estimation_using_theta_sketches.ipynb  bigquery_frequent_items_sketches_demo.ipynb  bigquery_geospatial_visualization.ipynb  bigquery_kll_quantiles_demo.ipynb  bigquery_kll_sketches_demo.ipynb  bigquery_match_recognize_demo.ipynb  bigquery_theta_sketches_demo.ipynb
performance_testing/jmeter/: README.md  bigquery_http_sampler.jmx  bigquery_jdbc_sampler.jmx  cancel_running_jobs.py  http_sampler_results.sql  jdbc_sampler_results.sql  run_jmeter_http_sampler.sh  run_jmeter_jdbc_sampler.sh
release/: build.sh  git_init.sh  main.tf
release/terraform/: .terraform.lock.hcl  cloudbuild.yaml  main.tf  variables.tf
remote_udfs/: README.md
scripts/: README.md
scripts/audit/: tables_last_accessed.sql
scripts/billing/: README.md
scripts/bqclients/: LICENSE  README.md  bq10_query_dryrun_cache.py  bq11_job_query_stats.py  bq12_parameterized.py  bq13_queryasync.py  bq14_gcs_bqload.py  bq15_authorized_views.py  bq16_external_bigtable.py  bq1_default_auth_and_log.py  bq2_improved_auth.py  bq3_sysoutlog.py  bq4_jsonlog_stdout.py  bq5_jsonlog_file.py  bq6_jsonlog_stackdriver.py  bq7_jsonlog_stackdriverandfile.py  bq8_queryfile.py  bq9_queryparams.py  bq_cmek_dataset.py  bq_oauth2_flow.py  bq_oauth2_pydata.py  bq_oauth2_query.py  requirements.txt
scripts/cloud_asset_inventory/: README.md  bq_table_all_editors.sql  bq_table_all_readers.sql
scripts/data_access/: README.md  create_data_access_view.sql  data_access_policy.json
scripts/jobs/: top_10_most_expensive_queries.sql
scripts/json2ddl/: README.md  bq_json2ddl.py
scripts/optimization/: README.md  actively_read_tables_with_partitioning_clustering_info.sql  alternate_largest_freq_read_tables_without_partitioning_or_clustering.sql  alternate_largest_tables_without_partitioning_or_clustering.sql  alternate_table_read_patterns.sql  anti_pattern_recoginition_tool_tables.sql  baseline_recommender.sql  bi_engine_disabled_reasons.sql  bi_engine_mode_duration.sql  compute_billiing_model_savings_ddl.sql  compute_billing_model_savings_ddl.sql  daily_project_analysis.sql  daily_reservation_analysis.sql  enable_recommender_api.sh  freq_read_tables_without_partitioning_or_clustering.sql  frequent_daily_table_dml.sql  hourly_slot_consumption_by_labels.sql  hourly_slot_consumption_by_query_hash.sql  largest_freq_read_tables_without_partitioning_or_clustering.sql  largest_tables_without_partitioning_or_clustering.sql  project_analysis.sql  queries_grouped_by_hash.sql  queries_grouped_by_hash_org.sql  queries_grouped_by_hash_project.sql  queries_grouped_by_hash_project_duration.sql  queries_grouped_by_labels.sql  queries_grouped_by_script.sql  query_performance_insights.sql  run_all_scripts.sh  run_anti_pattern_tool.sh  storage_billing_model_savings_ddl.sql  table_read_patterns.sql  table_read_patterns_by_query_hash.sql  tables_last_accessed.sql  tables_without_partitioning_or_clustering.sql  test_bash.sh  top_bytes_scanning_queries_by_hash.sql  update_queries_by_hash_w_anti_patterns.sql  viewable_queries_grouped_by_hash.sql  views_with_nonoptimal_join_condition.sql
scripts/policy_tag_extractor/: README.md  policy_tag_export.sh
scripts/procedure/: README.md
scripts/structify_generator/: README.md  structify_generator.py
stored_procedures/: README.md  bh_multiple_tests.sql  bqml_generate_embeddings.sql  cancel_jobs.sql  chi_square.sql  delete_datasets.sql  deploy.sh  get_next_id.sql  get_table_ddl.sql  linear_regression.sql  t_test.sql  t_test_paired.sql  workflow_settings.yaml
stored_procedures/definitions/: bh_multiple_tests.sqlx  bqml_generate_embeddings.sqlx  bqml_generate_text.sqlx  chi_square.sqlx  get_next_ids.sqlx  linear_regression.sqlx
tools/automatic_query_fixer/: .gitignore  README.md  build.gradle  settings.gradle
tools/backfill_audit_logs/: README.md  cloud_storage_audit_log.py
tools/check_constraints/: README.md  check_constraints.sql
tools/cloud_functions/: README.md
tools/custom_java_jdbc_client/: README.md  pom.xml
tools/dataform_assertions/: README.md  cloudbuild.yaml  dataform.json
tools/export_schemas/: README.md  export_schemas.py  requirements.txt
tools/legacy_sql_tranlsation_helper/: README.md  patternScan.py  readSQLToString.py  translatorCommaJoin.py
tools/policy_tags_migration/: README.md  migrate_policy_tags.py
tools/protobuf_export/: index.js  (+7 more)
udfs/: CONTRIBUTING.md  README.md  cloudbuild.yaml  cloudbuild_deploy.yaml  cloudbuild_js_libs.yaml  deploy.sh  deploy.yaml  dir_to_dataset_map.yaml  region_to_dataset_map.yaml  region_to_dataset_suffix_map.yaml  run_unit_tests.sh
udfs/datasketches-bq-udaf/datasketches-cpp/density/test/: CMakeLists.txt  density_sketch_test.cpp
udfs/datasketches/datasketches-cpp/count/: CMakeLists.txt
udfs/datasketches/datasketches-cpp/count/include/: count_min.hpp  count_min_impl.hpp
udfs/datasketches/datasketches-cpp/count/test/: CMakeLists.txt
udfs/datasketches/datasketches-cpp/sampling/test/: CMakeLists.txt  ebpps_sample_test.cpp  var_opt_sketch_deserialize_from_java_test.cpp  var_opt_union_serialize_for_java.cpp  var_opt_union_test.cpp
views/: etl_logging.sql
(+1493 files in other folders)
